이미지alt 추가

--- a/signin.html
+++ b/signin.html
@@ -15,9 +15,6 @@
   <link rel="stylesheet" href="/assets/CSS/mobile.css">
   <title>signin</title>
 </head>
-
-<!--네이밍은 형태_의미_상태 순으로 조합하며 3단계를 넘지 않도록 합니다.-->
-<!--sign말고 비밀번호 페이지와 공통되는 이름으로 재사용가능하게-->
 <body class="sign-header-wrap">
   <div class="sign-header-inner">
     <div class="sign-header-logo">
@@ -29,7 +26,7 @@
     </div>
 
     <form>
-      <div class="sign-wrap"> <!--인풋이름으로 적합하지 않음 input은 진짜 입력하는 곳에만-->
+      <div class="sign-wrap">
         <div class="sign-inner">
           <label for="email" class="sign-label">이메일</label>
           <input type="email" class="sign-input" name="eamil">
@@ -53,12 +50,12 @@
     <div class="social-sign__inner">
       <a href="https://www.google.com/">
         <div class="social-sign__icon">
-          <img src="/assets/img/svg/social-icon-google.png" class="social-sign__icon-img">
+          <img src="/assets/img/svg/social-icon-google.png" class="social-sign__icon-img" alt="google로 로그인하기">
         </div>
       </a>
       <a href="https://www.kakaocorp.com/page/">
         <div class="social-sign__icon">
-          <img src="/assets/img/svg/social-icon-kakao.png" class="social-sign__icon-img">
+          <img src="/assets/img/svg/social-icon-kakao.png" class="social-sign__icon-img" alt="kakao로 로그인하기">
         </div>
       </a>
     </div>
