--- a/signup.html
+++ b/signup.html
@@ -15,8 +15,6 @@
   <link rel="stylesheet" href="/assets/CSS/mobile.css">
   <title>signup</title>
 </head>
-
-<!--네이밍은 형태_의미_상태 순으로 조합하며 3단계를 넘지 않도록 합니다.-->
 <body class="sign-header-wrap">
   <div class="sign-header-inner">
     <div class="sign-header-logo">
@@ -61,12 +59,12 @@
     <div class="social-sign__inner">
       <a href="https://www.google.com/">
         <div class="social-sign__icon">
-          <img src="/assets/img/svg/social-icon-google.png" class="social-sign__icon-img">
+          <img src="/assets/img/svg/social-icon-google.png" class="social-sign__icon-img" alt="google로 로그인하기">
         </div>
       </a>
       <a href="https://www.kakaocorp.com/page/">
         <div class="social-sign__icon">
-          <img src="/assets/img/svg/social-icon-kakao.png" class="social-sign__icon-img">
+          <img src="/assets/img/svg/social-icon-kakao.png" class="social-sign__icon-img" alt="kakao로 로그인하기">
         </div>
       </a>
     </div>
