--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <me ta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="img/meta.png" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요."
+    />
     <title>Linkbrary</title>
-    <link rel="stylesheet" href="main.style.css" />
+    <link rel="stylesheet" href="index.style.css" />
     <link rel="stylesheet" href="global.css" />
   </head>
   <body>
