auth페이지 모바일 버전 완성

--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
       </a>
       <div class="auth__text-wp">
         <p class="auth__text">이미 회원이신가요?</p>
-        <a class="auth__link" href="./auth.html">로그인 하기</a>
+        <a class="auth__link" href="./signin.html">로그인 하기</a>
       </div>
       <form class="auth-form">
         <div class="auth-form__input-wp">
