메인 페이지 반응형 적용

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <link rel="stylesheet" href="css/landing.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta property="og:url" content="https://sjae1.netlify.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="imgs/og.jpeg" />
+    <meta property="og:site_name" content="Linkbrary" />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
     <title>Linkbrary</title>
   </head>
   <body>
@@ -22,7 +31,8 @@
         <div class="large-container">
           <h1 class="big-title black">
             <span class="rainbow">세상의 모든 정보</span>를<br />
-            쉽게 저장하고 관리해 보세요
+            쉽게 저장하고<br class="br-display" />
+            관리해 보세요
           </h1>
           <a href="signup.html">
             <div class="button white">링크 추가하기</div>
@@ -34,53 +44,85 @@
     <main>
       <section class="article">
         <div class="small-container odd">
-          <h2 class="small-title black">
-            <span class="title1-color">원하는 링크</span>를 <br />저장하세요
-          </h2>
-          <p class="paragraph gray-3">
-            나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
-            사고 싶은 옷, 기억하고 싶은 모든 것을<br />
-            한 공간에 저장하세요.
-          </p>
+          <div class="word-box">
+            <h2 class="small-title black">
+              <span class="title1-color">원하는 링크</span>를<br
+                class="br-mobile"
+              />
+              저장하세요
+            </h2>
+            <img
+              src="imgs/img1.png"
+              alt="링크 저장"
+              class="content-image-mobile"
+            />
+            <p class="paragraph gray-3">
+              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br class="br-mobile" />
+              사고 싶은 옷, 기억하고 싶은 모든 것을<br class="br-mobile" />
+              한 공간에 저장하세요.
+            </p>
+          </div>
           <img src="imgs/img1.png" alt="링크 저장" class="content-image" />
         </div>
       </section>
       <section class="article">
         <div class="small-container even">
-          <h2 class="small-title black">
-            링크를 폴더로<br />
-            <span class="title2-color">관리</span>하세요
-          </h2>
-          <p class="paragraph gray-3">
-            나만의 폴더를 무제한으로 만들고<br />
-            다양하게 활용할 수 있습니다.
-          </p>
+          <div class="word-box">
+            <h2 class="small-title black">
+              링크를 폴더로<br class="br-mobile" />
+              <span class="title2-color">관리</span>하세요
+            </h2>
+            <img
+              src="imgs/img2.png"
+              alt="폴더 관리"
+              class="content-image-mobile"
+            />
+            <p class="paragraph gray-3">
+              나만의 폴더를 무제한으로 만들고<br class="br-mobile" />
+              다양하게 활용할 수 있습니다.
+            </p>
+          </div>
           <img src="imgs/img2.png" alt="폴더 관리" class="content-image" />
         </div>
       </section>
       <section class="article">
         <div class="small-container odd">
-          <h2 class="small-title black">
-            저장한 링크를<br />
-            <span class="title3-color">공유</span>해 보세요
-          </h2>
-          <p class="paragraph gray-3">
-            여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-            가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
-            공유해 보세요.
-          </p>
+          <div class="word-box">
+            <h2 class="small-title black">
+              저장한 링크를<br class="br-mobile" />
+              <span class="title3-color">공유</span>해 보세요
+            </h2>
+            <img
+              src="imgs/img3.png"
+              alt="링크 공유"
+              class="content-image-mobile"
+            />
+            <p class="paragraph gray-3">
+              여러 링크를 폴더에 담고 공유할 수<br class="br-mobile" />
+              있습니다. 가족, 친구, 동료들에게 쉽고<br class="br-mobile" />
+              빠르게 링크를 공유해 보세요.
+            </p>
+          </div>
           <img src="imgs/img3.png" alt="링크 공유" class="content-image" />
         </div>
       </section>
       <section class="article">
         <div class="small-container even">
-          <h2 class="small-title black">
-            저장한 링크를<br />
-            <span class="title4-color">검색</span>해보세요
-          </h2>
-          <p class="paragraph gray-3">
-            중요한 정보들을 검색으로 쉽게 찾아보세요.
-          </p>
+          <div class="word-box">
+            <h2 class="small-title black">
+              저장한 링크를<br class="br-mobile" />
+              <span class="title4-color">검색</span>해보세요
+            </h2>
+            <img
+              src="imgs/img4.png"
+              alt="링크 검색"
+              class="content-image-mobile"
+            />
+            <p class="paragraph gray-3">
+              중요한 정보들을 검색으로 쉽게<br class="br-mobile" />
+              찾아보세요.
+            </p>
+          </div>
           <img src="imgs/img4.png" alt="링크 검색" class="content-image" />
         </div>
       </section>
