--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,11 @@
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <link rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./css/auth.css">
+  <meta property="og:title" content="Linkbrary" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://linkbrary-oh.netlify.app/" />
+  <meta property="og:image" content="./img/main_bg.png" />
+  <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
 </head>
 
 <body>
