로고 png -> svg파일로 변경

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header class="header">
     <div class="header__inner">
       <a class="header__link-home" href="/">
-        <img class="header__logo" src="./img/logo.png" alt="linkbrary logo">
+        <img class="header__logo" src="./img/logo.svg" alt="linkbrary logo">
       </a>
       <a class="btn header__link-login" href="./signin.html">로그인</a>
     </div>
