--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
   <div class="auth">
     <div class="auth__inner">
       <a href="/">
-        <img class="auth__logo" src="./img/logo_big.png" alt="Linkbrary logo">
+        <img class="auth__logo" src="./img/logo.svg" alt="Linkbrary logo">
       </a>
       <div class="auth__text-wp">
         <p class="auth__text">이미 회원이신가요?</p>
