Main image in landing.html adjusted
image size, position is changed as instruction.
'box-sizing'option set as 'content-box' and applied globally.

--- a/landing.html
+++ b/landing.html
@@ -27,17 +27,17 @@
     </div>
     <div class="head">
       <h1 class="head-text">
-        <span class="head-text-gradiant">세상의 모든 정보를</span><br>
+        <span class="head-text-gradiant">세상의 모든 정보</span>를<br>
         쉽게 저장하고 저장해 보세요
       </h1>
       <a class="head-button" href="./signup/">
         링크 추가하기
       </a>
-      <img alt="이미지-간판" src="./images/img-main.svg">
+      <div class="head-image" style="background-image: url('./images/img-main.svg');">
+      </div>
     </div>
   </header>
   <main>
-
     <section class="contents">
       <div>
         <h2 class="contents-text-title">
