main페이지 article의 본문 중 누락된 br 넣음

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <span class="main-article__title--gradient">검색</span>해 보세요
           </h2>
           <p class="main-article__p">
-            중요한 정보들을 검색으로 쉽게 찾아보세요.
+            중요한 정보들을 검색으로 쉽게 <br class="pc-br">찾아보세요.
           </p>
         </div>
         <img class="main-article__img" src="./img/section4.png" alt="저장한 링크를 검색해 보세요">
