Feat : meta 태그 적용

--- a/signin.html
+++ b/signin.html
@@ -10,7 +10,7 @@
     <div class="signinContainor">
         <div class="login">
             <div class="area1">
-                <a href="/"><img src="/static/img/logo.svg"></a>
+                <a href="/"><img src="/static/img/logo.svg" alt="LinkbraryLogo"></a>
                 <p>회원이 아니신가요? <a href="/signup.html" class="signupBtn">회원 가입하기</a></p>
             </div>
             <div class="area2">
@@ -21,7 +21,7 @@
                 <label class="label">
                     <p>비밀번호</p>
                     <input type="text" name="password" placeholder="비밀번호 입력">
-                    <img src="/static/img/eyes.svg" class="eyes">
+                    <img src="/static/img/eyes.svg" alt="비밀번호 보기" class="eyes">
                 </label>
             </div>
             <button class="loginBtn">로그인</button>
@@ -30,10 +30,10 @@
             <p>소셜 로그인</p>
             <div class="snsIcon">
                 <a href="https://www.google.com/" class="googleLogin">
-                    <img src="/static/img/googleLogin.png">
+                    <img src="/static/img/googleLogin.png" alt="구글 로그인">
                 </a>
                 <a href="https://www.kakaocorp.com/page/" class="kakaoLogin">
-                    <img src="/static/img/kakaoLogin.png">
+                    <img src="/static/img/kakaoLogin.png" alt="카카오 로그인">
                 </a>
             </div>
         </div>
