--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
     <div class="signupContainor">
         <div class="signup">
             <div class="area1">
-                <a href="/"><img src="/static/img/logo.svg"></a>
+                <a href="/"><img src="/static/img/logo.svg" alt="LinkbraryLogo"></a>
                 <p>이미 회원이신가요? <a href="/signin.html" class="signinBtn">로그인 하기</a></p>
             </div>
             <div class="area2">
@@ -21,12 +21,12 @@
                 <label class="label">
                     <p>비밀번호</p>
                     <input type="text" name="password" placeholder="비밀번호 입력">
-                    <img src="/static/img/eyes.svg" class="eyes">
+                    <img src="/static/img/eyes.svg" class="eyes" alt="비밀번호 보기">
                 </label>
                 <label class="label">
                     <p>비밀번호 확인</p>
                     <input type="text" name="passwordCheck" placeholder="비밀번호 확인">
-                    <img src="/static/img/eyes.svg" class="eyes">
+                    <img src="/static/img/eyes.svg" class="eyes" alt="비밀번호 보기">
                 </label>
             </div>
             <button class="signupBtn">회원가입</button>
@@ -35,10 +35,10 @@
             <p>다른 방식으로 가입하기</p>
             <div class="signupIcon">
                 <a href="https://www.google.com/" class="googleSignup">
-                    <img src="/static/img/googleLogin.png">
+                    <img src="/static/img/googleLogin.png" alt="구글 회원가입">
                 </a>
                 <a href="https://www.kakaocorp.com/page/" class="kakaoSignup">
-                    <img src="/static/img/kakaoLogin.png">
+                    <img src="/static/img/kakaoLogin.png" alt="카카오 회원가입">
                 </a>
             </div>
         </div>
