--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://junyoungee.netlify.app/">
+    <meta property="og:title" content="Linkbrary">
+    <meta property="og:image" content="./static/img/dim.png">
+    <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+    <meta property="og:site_name" content="Linkbrary">
     <title>Linkbrary</title>
     <link rel="stylesheet" href="/static/css/style.css" />
 </head>
