Four images in <main>tag in landing.html adjusted
images imported at <div> tag via CSS style rather than <img> tag to fix
its size.

--- a/landing.html
+++ b/landing.html
@@ -50,11 +50,13 @@
           한 공간에 저장하세요.
         </p>
       </div>
-      <img class="contents-image" alt="이미지-저장" src="./images/img1.svg" height=450>
+      <div class="contents-image" alt="이미지-링크" style="background-image: url(./images/img1.svg);">
+      </div>
     </section>
 
     <section class="contents">
-      <img class="contents-image" alt="이미지-저장" src="./images/img2.svg" height=450>
+      <div class="contents-image" alt="이미지-관리" style="background-image: url('./images/img2.svg');">
+      </div>
       <div>
         <h2 class="contents-text-title">
           링크를 폴더로<br>
@@ -78,11 +80,13 @@
           공유해 보세요.
         </p>
       </div>
-      <img class="contents-image" alt="이미지-저장" src="./images/img3.svg" height=450>
+      <div class="contents-image" alt="이미지-공유" style="background-image: url(./images/img3.svg);">
+      </div>
     </section>
 
     <section class="contents">
-      <img class="contents-image" alt="이미지-저장" src="./images/img4.svg" height=450>
+      <div class="contents-image" alt="이미지-검색" style="background-image: url(./images/img4.svg);">
+      </div>
       <div>
         <h2 class="contents-text-title">
           저장한 링크를<br>
