index 반응형 웹페이지 작성완료

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <main>
       <section class="main_section">
         <h1 class="main_section_text">
-          <span class="main_section_span">세상의 모든 정보</span>를<br />
-          쉽게 저장하고<br class="br_hidden" />
+          <span class="main_section_span">세상의 모든 정보</span>를<br
+            class="desktop_br tablet_br mobile_br"
+          />
+          쉽게 저장하고<br class="tablet_br mobile_br" />
           관리해 보세요
         </h1>
         <a href="/signup/signup.html"
@@ -42,12 +44,17 @@
         <div class="flex_boxs boxs_margin_top">
           <div>
             <h2 class="flex_box_text">
-              <span class="text_span_first">원하는 링크</span>를<br />
+              <span class="text_span_first">원하는 링크</span>를<br
+                class="desktop_br tablet_br"
+              />
               저장하세요
             </h2>
             <p class="flex_box_p">
-              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
-              사고 싶은 옷, 기억하고 싶은 모든 것을<br />
+              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br
+                class="desktop_br tablet_br"
+              />
+              사고 싶은 옷,<br class="mobile_br" />
+              기억하고 싶은 모든 것을<br class="desktop_br tablet_br" />
               한 공간에 저장하세요.
             </p>
           </div>
@@ -62,7 +69,7 @@
 
         <div class="flex_boxs boxs_margin">
           <img
-            clss="imgs"
+            class="imgs mobile_order"
             src="img/image_box3.png"
             alt="폴더 이름 변경하기"
             width="414px"
@@ -70,12 +77,13 @@
           />
           <div>
             <h2 class="flex_box_text">
-              링크를 폴더로<br />
+              링크를 폴더로<br class="desktop_br tablet_br" />
               <span class="text_span_second">관리</span>하세요
             </h2>
             <p class="flex_box_p">
-              나만의 폴더를 무제한으로 만들고<br />
-              다양하게 활용할 수 있습니다.
+              나만의 폴더를 무제한으로 만들고<br class="desktop_br tablet_br" />
+              다양하게 활용할 수<br class="mobile_br" />
+              있습니다.
             </p>
           </div>
         </div>
@@ -83,12 +91,15 @@
         <div class="flex_boxs boxs_margin">
           <div>
             <h2 class="flex_box_text">
-              저장한 링크를<br />
+              저장한 링크를<br class="desktop_br tablet_br" />
               <span class="text_span_third">공유</span>해 보세요.
             </h2>
             <p class="flex_box_p">
-              여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-              가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
+              여러 링크를 폴더에 담고 공유할 수<br class="tablet_br" />
+              있습니다.<br class="desktop_br" />
+              가족,<br class="mobile_br" />
+              친구, 동료들에게 쉽고<br class="tablet_br" />
+              빠르게 링크를<br class="desktop_br" />
               공유해 보세요.
             </p>
           </div>
@@ -103,7 +114,7 @@
 
         <div class="flex_boxs boxs_margin">
           <img
-            class="imgs"
+            class="imgs mobile_order"
             src="img/image_box5.png"
             alt="검색 서비스"
             width="550px"
@@ -111,10 +122,13 @@
           />
           <div>
             <h2 class="flex_box_text">
-              저장한 링크를<br />
+              저장한 링크를<br class="desktop_br tablet_br" />
               <span class="text_span_fourth">검색</span>해 보세요
             </h2>
-            <p class="flex_box_p">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
+            <p class="flex_box_p">
+              중요한 정보들을 검색으로 쉽게<br class="tablet_br" />
+              찾아보세요.
+            </p>
           </div>
         </div>
       </section>
