refactor(mentor): inline으로 작성한 스타일 css파일에 작성

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             공유해 보세요
           </div>
           <div class="images">
-            <img class="back" src="images/image 25.png">
-            <img style="position: absolute;"src="images/폴더 공유하기 팝업 1.png">
+            <img class="images-back" src="images/image 25.png">
+            <img class="images-front" src="images/폴더 공유하기 팝업 1.png">
           </div>
         </div>
         <div class="service-04 card">
@@ -96,11 +96,11 @@
   <footer>
     <div class="footer-info">
       <p>@codeit-2023</p>
-      <div class="middle" style="display: flex; gap:30px">
+      <div class="middle">
         <a href="/privacy">Privacy Policy</a>
         <a href="/faq">FAQ</a>
       </div>
-      <div class="left" style="display: flex; gap:12px">
+      <div class="left">
         <a href="https://www.facebook.com" target="_blank"><img src="images/akar-icons_facebook-fill.svg"> </a>
         <a href="https://www.twitter.com" target="_blank"><img src="images/akar-icons_twitter-fill.svg"></a>
         <a href="https://www.youtube.com" target="_blank"><img src="images/akar-icons_youtube-fill.svg"></a>
