Delete static folder

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      property="og:image"
-      content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
-    />
+    <meta property="og:image" content="static/img/Linkbrary.jpg" key="image" />
     <meta property="og:title" content="Linkbrary" />
     <meta
       property="og:description"
@@ -20,7 +17,7 @@
     <nav class="nav">
       <div class="nav__bar">
         <a href="main.html">
-          <img class="logo" src="./img/logo.svg" alt="logo" />
+          <img class="logo" src="img/logo.svg" alt="logo" />
         </a>
         <a class="login__link" href="signin.html">로그인</a>
       </div>
@@ -38,7 +35,7 @@
           <a class="signup__link" href="signup.html">링크 추가하기</a>
         </div>
         <div class="main__img-section">
-          <img class="main__img" src="./img/main.png" alt="main" />
+          <img class="main__img" src="img/main.png" alt="main" />
         </div>
       </section>
       <section class="section">
@@ -56,12 +53,12 @@
               한 공간에 저장하세요.
             </div>
           </div>
-          <img class="section-img" src="./img/save.png" alt="save" />
+          <img class="section-img" src="img/save.png" alt="save" />
         </div>
       </section>
       <section class="section">
         <div class="section__content reverse">
-          <img class="section-img" src="./img/manage.png" alt="manage" />
+          <img class="section-img" src="img/manage.png" alt="manage" />
           <div class="description-section">
             <h2>
               링크를 폴더로<br />
@@ -87,12 +84,12 @@
               공유해보세요.
             </div>
           </div>
-          <img class="section-img" src="./img/share.png" alt="share" />
+          <img class="section-img" src="img/share.png" alt="share" />
         </div>
       </section>
       <section class="section">
         <div class="section__content reverse">
-          <img class="section-img" src="./img/search.png" alt="search" />
+          <img class="section-img" src="img/search.png" alt="search" />
           <div class="description-section">
             <h2>
               저장한 링크를<br />
@@ -114,16 +111,16 @@
         </div>
         <div class="footer__social">
           <a href="https://www.facebook.com/"
-            ><img src="./img/facebook.svg" alt="Facebook" name="Facebook"
+            ><img src="img/facebook.svg" alt="Facebook" name="Facebook"
           /></a>
           <a href="https://twitter.com/"
-            ><img src="./img/twitter.svg" alt="Twitter" name="Twitter"
+            ><img src="img/twitter.svg" alt="Twitter" name="Twitter"
           /></a>
           <a href="https://youtube.com">
-            <img src="./img/youtube.svg" alt="Youtube" name="Youtube"
+            <img src="img/youtube.svg" alt="Youtube" name="Youtube"
           /></a>
           <a href="https://instagram.com"
-            ><img src="./img/instagram.svg" alt="Instagram" name="instagram"
+            ><img src="img/instagram.svg" alt="Instagram" name="instagram"
           /></a>
         </div>
       </div>
