--- a/signup.html
+++ b/signup.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signUp</title>
-    <link rel="stylesheet" href="signUp.css" />
+    <link rel="stylesheet" href="signup.css" />
     <link rel="stylesheet" href="global.css" />
   </head>
   <body>
     <div class="section">
-      <div class="content">
+      <form class="content">
         <div class="title">
           <a href="index.html">
-            <img class="logo-img" src="./img/logo.svg" alt="" />
+            <img class="logo-img" src="img/logo.svg" alt="" />
           </a>
           <div class="question">
             이미 회원이신가요?
@@ -34,18 +34,17 @@
             <input class="user-input" type="password" name="verifyPassword" />
           </div>
         </div>
-        <form action="">
-          <button class="signup">회원가입</button>
-        </form>
-      </div>
+
+        <button class="signup">회원가입</button>
+      </form>
       <div class="social">
         <div class="social-text">다른 방식으로 가입하기</div>
         <div class="social-link">
           <a href="https://www.google.com/"
-            ><img src="./img/google.svg" alt=""
+            ><img src="img/google.svg" alt=""
           /></a>
           <a href="https://www.kakaocorp.com/page/"
-            ><img src="./img/kakao.svg" alt=""
+            ><img src="img/kakao.svg" alt=""
           /></a>
         </div>
       </div>
