--- a/signin.html
+++ b/signin.html
@@ -12,7 +12,7 @@
       <form class="content">
         <div class="title">
           <a href="index.html">
-            <img class="logo-img" src="./img/logo.svg" alt="" />
+            <img class="logo-img" src="img/logo.svg" alt="" />
           </a>
           <div class="question">
             <div class="question-text">회원이 아니신가요?</div>
@@ -29,17 +29,15 @@
             <input class="user-input" type="password" name="password" />
           </div>
         </div>
-        <form action="">
-          <button class="signin">로그인</button>
-        </form>
+        <button class="signin">로그인</button>
         <div class="social">
           <div class="social-text">소셜 로그인</div>
           <div class="social-link">
             <a href="https://www.google.com/"
-              ><img src="./img/google.svg" alt=""
+              ><img src="img/google.svg" alt=""
             /></a>
             <a href="https://www.kakaocorp.com/page/"
-              ><img src="./img/kakao.svg" alt=""
+              ><img src="img/kakao.svg" alt=""
             /></a>
           </div>
         </div>
