sign 페이지 반응형 적용, footer 수정

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </main>
     <footer>
       <div class="footer-box white">
-        <div>
+        <div class="codeit-text">
           <span class="gray-3">©codeit - 2023</span>
         </div>
         <div class="help">
