--- a/signin.html
+++ b/signin.html
@@ -31,7 +31,7 @@
           <label for="password">비밀번호</label>
           <div class="password">
             <input id="password" name="password" type="password" />
-            <i class="fa-solid fa-eye" id="togglePassword"></i>
+            <i class="fa-solid fa-eye fa-2x" id="togglePassword"></i>
           </div>
           <button class="signin-but white">로그인</button>
         </form>
