--- a/signup.html
+++ b/signup.html
@@ -31,12 +31,12 @@
           <label for="password">비밀번호</label>
           <div class="password">
             <input id="password" name="password" type="password" />
-            <i class="fa-solid fa-eye togglePassword"></i>
+            <i class="fa-solid fa-eye fa-2x togglePassword"></i>
           </div>
           <label for="password">비밀번호 확인</label>
           <div class="password">
             <input id="password" name="password" type="password" />
-            <i class="fa-solid fa-eye togglePassword"></i>
+            <i class="fa-solid fa-eye fa-2x togglePassword"></i>
           </div>
           <button class="signin-but white">회원가입</button>
         </form>
