refactor(mentor): 이미지 태그에 alt 속성 추가

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         쉽게 저장하고 관리해 보세요
       </h1>
       <button class="onclick-signup button-style" onclick="location.href='signup'">링크 추가하기</button>
-      <img src="images/image25.png">
+      <img src="images/image25.png" alt="서비스 썸네일">
     </section>
     <section class="service">
       <div class="cards">
@@ -40,19 +40,19 @@
             한 공간에 저장하세요
           </div>
           <div class="images">
-            <img src="images/Card 1.png">
+            <img src="images/Card 1.png" alt="카드이미지1">
             <div class="center">
-              <img src="images/Card.png">
+              <img src="images/Card.png" alt="카드이미지2">
               <div class="icon">
-                <img src="images/Group 20.svg">
+                <img src="images/Group 20.svg" alt="카드이미지2의 아이콘">
               </div>
             </div>
-            <img src="images/Card-1.png">
+            <img src="images/Card-1.png" alt="카드이미지3">
           </div>
         </div>
         <div class="service-02 card">
           <div class="images">
-            <img src="images/디스크립션 없는 팝업 1.png">
+            <img src="images/디스크립션 없는 팝업 1.png" alt="폴더 이름 변경하기 팝업 이미지">
           </div>
           <div class="card-text">
             <h2>
@@ -74,13 +74,13 @@
             공유해 보세요
           </div>
           <div class="images">
-            <img class="images-back" src="images/image 25.png">
-            <img class="images-front" src="images/폴더 공유하기 팝업 1.png">
+            <img class="images-back" src="images/image 25.png" alt="팝업 이미지 배경">
+            <img class="images-front" src="images/폴더 공유하기 팝업 1.png" alt="폴더 공유하기 팝업">
           </div>
         </div>
         <div class="service-04 card">
           <div class="images">
-            <img src="images/스크린샷 2023-03-17 오후 3.22 1.png">
+            <img src="images/스크린샷 2023-03-17 오후 3.22 1.png" alt="링크 검색 창 이미지">
           </div>
           <div>
             <h2>
