--- a/signin.html
+++ b/signin.html
@@ -14,7 +14,7 @@
     <div class="title">
       <div class="logo">
         <a href="/"> 
-          <img src="images/logo.svg">
+          <img src="images/logo.svg" alt="로고">
         </a>
       </div>
       <h2>
@@ -41,10 +41,14 @@
       <p>소셜 로그인</p>
       <div class="social-icon">
         <div class="image1">
-          <a href="http://www.google.com"><img src="images/google.png"></a>
+          <a href="http://www.google.com">
+            <img src="images/google.png" alt="구글 아이콘">
+          </a>
         </div>
         <div class="image2">
-          <a href="http://www.kakao.com"><img src="images/99FE484C5C3451F218 1.svg"></a>
+          <a href="http://www.kakao.com">
+            <img src="images/99FE484C5C3451F218 1.svg" alt="카카오 아이콘">
+          </a>
         </div>
       </div>
     </div>
