--- a/signup.html
+++ b/signup.html
@@ -14,11 +14,11 @@
     <div class="title">
       <div class="logo">
         <a href="/"> 
-          <img src="images/logo.svg">
+          <img src="images/logo.svg" alt="로고 이미지">
         </a>
       </div>
       <h2>
-        이미 회원이신가요>
+        이미 회원이신가요?
         <a href="./signin.html">로그인하기</a>
       </h2>
     </div>
@@ -48,10 +48,10 @@
       <p>다른 방식으로 가입하기</p>
       <div class="social-icon">
         <div class="image1">
-          <a href="http://www.google.com"><img src="images/google.png"></a>
+          <a href="http://www.google.com"><img src="images/google.png" alt="구글 아이콘"></a>
         </div>
         <div class="image2">
-          <a href="http://www.kakao.com"><img src="images/99FE484C5C3451F218 1.svg"></a>
+          <a href="http://www.kakao.com"><img src="images/99FE484C5C3451F218 1.svg" alt="카카오 아이콘"></a>
         </div>
       </div>
     </div>
