style: 로그인/회원가입 로직의 모듈화: 모듈 import형식으로 메소드 쓰도록 만듬

--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	
 	<script type="module" src="js/password-visible.js"></script>
-	<script type="module" src="js/auth-signup.js"></script>
+	<script type="module" src="js/signup.js"></script>
 	
 	<meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
 	<meta name="keywords" content="도서관, 책, 정보, 데이터베이스">
