--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Linkbray</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <!-- css 링크 -->
+    <meta property="og:image" content="/img/coding.jpg" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
+    <meta property="og:url" content="https://www.linkbrary.kr" />
+    <!-- 페이스북 meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="/img/coding.jpg" />
+    <meta name="twitter:title" content="Linkbrary" />
+    <meta
+      name="twitter:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
+    <!-- 트위터 meta tags-->
   </head>
   <body>
     <header class="header">
