refactor(mentor): 페이지 이동 하는 태그 a태그로 변경

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <a style="cursor: pointer;" href="/">
       <img src="images/logo.svg">
     </a>
-    <button class="onclick-signin button-style" onclick="location.href='./signin.html'">
+    <a class="onclick-signin button-style" href='./signin.html'>
       로그인
-    </button>
+    </a>
   </header>
   <main>
     <section class="main">
@@ -24,7 +24,7 @@
         <span>세상에 모든 정보</span>를 <br>
         쉽게 저장하고 관리해 보세요
       </h1>
-      <button class="onclick-signup button-style" onclick="location.href='signup'">링크 추가하기</button>
+      <a class="onclick-signup button-style">링크 추가하기</a>
       <img src="images/image25.png" alt="서비스 썸네일">
     </section>
     <section class="service">
