refactor(mentor): 태그 위치 변경

--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 </head>
 <body>
   <header>
-    <a style="cursor: pointer;" href="/">
-      <img src="images/logo.svg">
-    </a>
+    <h1>
+      <a href="/">
+        <img src="images/logo.svg">
+      </a>
+    </h1>
     <a class="onclick-signin button-style" href='./signin.html'>
       로그인
     </a>
   </header>
   <main>
     <section class="main">
-      <h1 class="main-title">
+      <div class="main-title">
         <span>세상에 모든 정보</span>를 <br>
         쉽게 저장하고 관리해 보세요
-      </h1>
+      </div>
       <a class="onclick-signup button-style">링크 추가하기</a>
       <img src="images/image25.png" alt="서비스 썸네일">
     </section>
