Add margin to nav logo and button

--- a/landing.html
+++ b/landing.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <div class="nav">
-      <a href="./landing.html">
+      <a class="nav-logo" href="./landing.html">
         <img alt="로고" src="./images/logo.svg">
       </a>
       <a class="nav-button" href="./signin/signin.html">로그인</a>
