--- a/index.html
+++ b/index.html
@@ -1,93 +1,140 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width. initial-scale=1.0">
-  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
-  <link rel="stylesheet" href="style.css"/>
-  <title>Linkbrary</title>
-</head>
-    <body>
-        <header>
-            <div class="headercontainer">
-                <a href="index.html"><img src="logo.svg" alt="logo" width="133px" height="24px"></a>
-                <a class="signin" href="signin.html">로그인</a>
-            </div>
-        </header>
-        <div class="main_container">
-            <div class="main_content">
-                <p><span class="main_gradation">세상의 모든 정보</span>를<br>
-                    쉽게 저장하고 관리해 보세요
-                </p>
-                <div class="add_link">
-                    <a href="signin.html">링크 추가하기</a>
-                </div>
-                <div image_box>
-                    <img src="img1.png" alt="main_img"/>
-                </div>
-            </div>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Linkbrary</title>
+    <meta property="og:title" content="Linkbrary" key="title" />
+    <meta
+      name="description"
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+      key="description"
+    />
+    <meta
+      property="og:image"
+      content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
+      key="image"
+    />
+    <meta
+      property="og:url"
+      content="https://doyeon-linkbrary-3week.netlify.app/"
+      key="url"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@linkbrary" />
+    <meta name="twitter:title" content="Linkbrary" />
+    <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
+    <meta
+      name="twitter:image"
+      content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
+    <link rel="stylesheet" href="./src/landing.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="gnb">
+        <a href="index.html">
+          <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+        </a>
+        <a class="cta cta-short" href="signin.html">
+          <span>로그인</span>
+        </a>
+      </div>
+    </nav>
+    <header>
+      <div class="hero-header">
+        <h1 class="slogan">
+          <span class="slogan-gradient background-clip-text"> 세상의 모든 정보</span>를
+          <br />
+          쉽게 저장하고 관리해 보세요
+        </h1>
+        <a class="cta cta-long" href="signup.html">
+          <span>링크 추가하기</span>
+        </a>
+        <img src="./images/hero.png" class="hero-image" alt="Linkbrary 서비스 소개" />
+      </div>
+    </header>
+    <article>
+      <section>
+        <h2 class="title">
+          <span class="title-1-gradient background-clip-text"> 원하는 링크</span>를
+          <br />
+          저장하세요
+        </h2>
+        <p class="description">
+          나중에 읽고 싶은 글, 다시 보고 싶은 영상,
+          <br />
+          사고 싶은 옷, 기억하고 싶은 모든 것을
+          <br />
+          한 공간에 저장하세요.
+        </p>
+        <img src="./images/image1.png" class="content-image" alt="링크의 내용이 담긴 카드들" />
+      </section>
+      <section>
+        <h2 class="title">
+          링크를 폴더로
+          <br />
+          <span class="title-2-gradient background-clip-text">관리</span>하세요
+        </h2>
+        <p class="description">
+          나만의 폴더를 무제한으로 만들고
+          <br />
+          다양하게 활용할 수 있습니다.
+        </p>
+        <img src="./images/image2.png" class="content-image" alt="폴더 이름 변경 기능" />
+      </section>
+      <section>
+        <h2 class="title">
+          저장한 링크를
+          <br />
+          <span class="title-3-gradient background-clip-text">공유</span>해 보세요
+        </h2>
+        <p class="description">
+          여러 링크를 폴더에 담고 공유할 수 있습니다.
+          <br />
+          가족, 친구, 동료들에게 쉽고 빠르게 링크를
+          <br />
+          공유해 보세요.
+        </p>
+        <img src="./images/image3.png" class="content-image" alt="폴더 공유 기능" />
+      </section>
+      <section>
+        <h2 class="title">
+          저장한 링크를
+          <br />
+          <span class="title-4-gradient background-clip-text">검색</span>해 보세요
+        </h2>
+        <p class="description">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
+        <img src="./images/image4.png" class="content-image" alt="링크 검색 기능" />
+      </section>
+    </article>
+    <footer>
+      <div class="footer-box">
+        <span class="copyright">©codeit - 2023</span>
+        <div class="footer-links">
+          <a class="footer-link" href="privacy.html">Privacy Policy</a>
+          <a class="footer-link" href="faq.html">FAQ</a>
         </div>
-        <div class="first_container">
-            <div class="first_content">
-                <div class="first_text">
-                    <h2>
-                        <span>원하는 링크</span>를<br>
-                        저장하세요
-                    </h2>
-                    <p>
-                        나중에 읽고 싶은 글, 다시 보고 싶은 영상,
-                        사고 싶은 옷, 기억하고 싶은 모든 것을
-                        한 공간에 저장하세요.
-                    </p>
-                </div>
-                <img class="first_img" src="img2.png" alt="first_img"/>
-            </div>
+        <div class="sns">
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+            <img src="./images/facebook.svg" alt="facebook 홈페이지로 연결된 facebook 로고" />
+          </a>
+          <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+            <img src="./images/twitter.svg" alt="twitter 홈페이지로 연결된 twitter 로고" />
+          </a>
+          <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+            <img src="./images/youtube.svg" alt="youtube 홈페이지로 연결된 youtube 로고" />
+          </a>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+            <img src="./images/instagram.svg" alt="instagram 홈페이지로 연결된 instagram 로고" />
+          </a>
         </div>
-        <div class="second_container">
-            <div class="second_content">
-                <img class="second_img" src="img3.png" alt="second_img"/>
-                <div class="second_text">
-                    <h2>
-                        링크를 폴더로<br>
-                        <span>관리</span>하세요
-                    </h2>
-                    <p>
-                        나만의 폴더를 무제한으로 만들고<br>
-                        다양하게 활용할 수 있습니다.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="third_container">
-            <div class="third_content">
-                <div class="third_text">
-                    <h2>
-                        저장한 링크를<br>
-                        <span>공유</span>해 보세요
-                    </h2>
-                    <p>
-                        여러 링크를 폴더에 담고 공유할 수 있습니다.
-                        가족, 친구, 동료들에게 쉽고 빠르게 링크를
-                        공유해 보세요.
-                    </p>
-                </div>
-                <img class="third_img" src="img4.png" alt="third_img"/>
-            </div>
-        </div>
-        <div class="fourth_container">
-            <div class="fourth_content">
-                <img class="fourth_img" src="img6.png" alt="fourth_img"/>
-                <div class="fourth_text">
-                    <h2>
-                        저장한 링크를<br>
-                        <span>검색</span>해 보세요
-                    </h2>
-                    <p>
-                        중요한 정보들을 검색으로 쉽게 찾아보세요.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </body>
+      </div>
+    </footer>
+  </body>
 </html>
