--- a/signin.html
+++ b/signin.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width. initial-scale=1.0">
-  <link rel="stylesheet" href="signin.css"/>
-  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-  <title>Linkbrary</title>
-</head>
-    <body>
-      <main>
-        <div class="container">
-          <div class="signup">
-            <a href="index.html"><img src="logo.svg" alt="logo" width="210px" height="38px"></a>
-            <div>
-              회원이 아니신가요?
-              <a class="tosignup" href="signup.html">회원 가입하기</a>
-            </div>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>로그인</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
+    <link rel="stylesheet" href="./src/sign.css" />
+  </head>
+  <body>
+    <header>
+      <a class="logo-link" href="index.html">
+        <img class="header-logo" src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+      </a>
+      <p class="header-message">
+        회원이 아니신가요?<a class="header-link" href="signup.html">회원 가입하기</a>
+      </p>
+    </header>
+    <div class="sign-box">
+      <form class="sign-form">
+        <div class="sign-inputs">
+          <div class="sign-input-box">
+            <label class="sign-input-label">이메일</label>
+            <input class="sign-input" />
           </div>
-          <form>
-            <label for="email">이메일</label>
-            <input id="email" name="email" type="email"/>
-              <label for="password">비밀번호</label>
-              <input id="password" name="password" type="password"/>
-            <button type="submit" class="signin_button">로그인</button>
-          </form>
-          <div class="social_login">
-            <div>소셜 로그인</div>
-            <div class="social">
-              <a href="https://www.google.com/"><img src="login-google.png" alt="google"></a>
-              <a href="https://www.kakaocorp.com/page/"><img src="login-kakao.png" alt="kakao"></a>
-            </div>
+          <div class="sign-input-box sign-password">
+            <label class="sign-input-label">비밀번호</label>
+            <input class="sign-input" type="password" />
+            <button class="eye-button" type="button">
+              <img src="./images/eye-off.svg" />
+            </button>
           </div>
         </div>
-      </main>
-    </body>
+        <button class="cta" type="submit">로그인</button>
+      </form>
+      <div class="sns-box">
+        <span class="sns-text">소셜 로그인</span>
+        <div class="sns-links">
+          <a class="sns-link google-link" href="https://www.google.com/">
+            <img src="./images/google.png" />
+          </a>
+          <a class="sns-link kakao-link" href="https://www.kakaocorp.com/page/">
+            <img src="./images/kakao.svg" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
