--- a/landing.html
+++ b/landing.html
@@ -28,7 +28,7 @@
     <div class="head">
       <h1 class="head-text">
         <span class="head-text-gradiant">세상의 모든 정보</span>를<br>
-        쉽게 저장하고 저장해 보세요
+        쉽게 저장하고<br class="braek"> 저장해 보세요
       </h1>
       <a class="head-button" href="./signup/">
         링크 추가하기
