--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a class="logo" href="index.html">
           <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
         </a>
-        <a class="login-btn cta cta-short" href="signin.html">
+        <a class="login-btn cta cta-short ctaa" href="signin.html">
           <span>로그인</span>
         </a>
       </div>
@@ -46,7 +46,9 @@
         <h1 class="slogan">
           <span class="slogan-gradient background-clip-text"> 세상의 모든 정보</span>를
           <br />
-          쉽게 저장하고 관리해 보세요
+          쉽게 저장하고
+          <br class="slogan-new-line" />
+          관리해 보세요
         </h1>
         <a class="cta cta-long" href="signup.html">
           <span>링크 추가하기</span>
