--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,11 +46,13 @@
 
   <article class="content-wrap">
     <!-- content1 -->
-    <section class="card-item">
+    <section class="card-wrap">
       <div class="card-inner">
         <h2 class="card-item__title">
           <span class="title-1-gradient background-clip-text">
-            원하는 링크</span>를<br>저장하세요
+            원하는 링크</span>를
+            <br />
+            저장하세요
         </h2>
         <p class="card-item__text">
           나중에 읽고 싶은 글, 다시 보고 싶은 영상,
@@ -64,7 +66,7 @@
     </section>
 
     <!-- content2 -->
-    <section class="card-item">
+    <section class="card-wrap">
       <div class="card-inner">
         <h2 class="card-item__title">
           링크를 폴더로
@@ -81,7 +83,7 @@
     </section>
 
     <!-- content3 -->
-    <section class="card-item">
+    <section class="card-wrap">
       <div class="card-inner">
         <h2 class="card-item__title">
           저장된 링크로
@@ -100,7 +102,7 @@
     </section>
 
     <!-- content4 -->
-    <section class="card-item">
+    <section class="card-wrap">
       <div class="card-inner">
         <h2 class="card-item__title">
           저장한 링크로
